# plotext_plus

./: .ai-context  .cursorrules  CLAUDE.md  MANIFEST.in  README.md  llms.txt  pyproject.toml  test_server_config.json
docs/: basic.md  image.md  mcp-server.md
examples/: interactive_demo.py
src/plotext_plus/: _api.py  _core.py  _figure.py  _monitor.py  charts.py  mcp_server.py
