[project]
name = "plotext_plus"
version = "0.1.0"
description = "plotext_plus: Modern enhanced plotext for terminal plotting with clean API, themes, and chart classes"
authors = [
    {name = "Chris Mitchell", email = "chris@ccmitchellusa.com"}
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "chuk-term>=0.1.0",
    "pillow>=11.3.0",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ccmitchellusa/plotext_plus"

[project.optional-dependencies]
image = ["pillow>=8.4"]
video = [
    "pillow>=8.4",
 "pafy>=0.5.5",
 "opencv-python>=4.5.5",
 "ffpyplayer>=4.3.5",
 "youtube-dl==2020.12.2",
]
completion = ["shtab"]

[project.scripts]
plotext_plus = "plotext_plus.plotext_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests", 
    "/examples",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plotext_plus"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
